fix settings-table spacing

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -5992,6 +5992,7 @@ output {
     font-weight: normal;
     text-transform: uppercase;
     font-size: 12px;
+    line-height: 17px;
     letter-spacing: 0.05em;
     background: hsl(197,20%,93%);
     border-bottom: none;
